# fleet-management

./: .gitignore  .sdv-blueprint.json  CONTRIBUTING.md  DEPENDENCIES  DEPENDENCIES.txt  LICENSE  LICENSES  NOTICE.md  README.md  SECURITY.md  covesa-blueprint-compose.yaml  create-config-functions.sh  create-config-hono.sh  docker-compose.yaml  fms-blueprint-compose-hono.yaml  fms-blueprint-compose-zenoh.yaml  fms-blueprint-compose.yaml  provision-vehicle-to-hono.sh  zenoh-config.json  zenoh-config.json5
.github/scripts/: check-3rd-party-licenses.sh
.github/workflows/: check-dependencies.yaml  containerize_fleet_analysis_backend.yaml  containerize_fms_consumer.yaml  containerize_fms_forwarder.yaml  containerize_fms_server.yaml  lint_source_code.yaml
components/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.covesa-cv-forwarder  Dockerfile.fms-consumer  Dockerfile.fms-forwarder  Dockerfile.fms-server  about.hbs  about.toml
components/LICENSES/: matchit-0.7.0.txt
components/backend-fleet-analysis-java/: Dockerfile  README.md  openapi.yaml  pom.xml
components/backend-fleet-analysis-java/src/main/java/org/eclipse/sdv/fleet/analysis/: AnalysisApplication.java  FleetAnalysisResource.java  FleetAnalysisSummary.java  FleetStatsResource.java  FleetStatsSummary.java  FleetTelemetry.java  InfluxDbConfig.java  InfluxDbWriter.java  InfluxStatsConfig.java  InfluxStatsService.java  InfluxTelemetryPayload.java  InfluxTelemetryResource.java  InfluxWriteResult.java
components/covesa-cv-forwarder/: Cargo.toml  README.md  build.rs  run_covesa_forwarder.sh
components/covesa-cv-forwarder/src/: curvelogging.rs  main.rs  status_publishing.rs  vehicle_abstraction.rs
components/covesa-cv-forwarder/src/vehicle_abstraction/: kuksa.rs  vss.rs
components/fms-consumer/: Cargo.toml  README.md
components/fms-consumer/src/: main.rs
components/fms-forwarder/: Cargo.toml  README.md  build.rs  entrypoint.sh
components/fms-forwarder/proto/kuksa/val/v1/: val.proto
components/fms-forwarder/src/: hono_publisher.rs  main.rs  mqtt_connection.rs  status_publishing.rs  vehicle_abstraction.rs  zenoh_publisher.rs
components/fms-forwarder/src/vehicle_abstraction/: kuksa.rs  vss.rs
components/fms-forwarder/tests/: kuksa_test.rs
components/fms-proto/: Cargo.toml  README.md  build.rs
components/fms-proto/proto/fms/v4/: fms.proto
components/fms-proto/src/: lib.rs
components/fms-server/: Cargo.toml
components/fms-server/src/: influx_reader.rs  lib.rs  main.rs  models.rs  query_parser.rs
components/fms-server/src/models/: mod.rs  position.rs  status.rs  vehicle.rs
components/fms-server/tests/: invalid_requests.rs
components/fms-util/: Cargo.toml
components/fms-util/src/: lib.rs  zenoh.rs
components/fms-zenoh/: Cargo.toml
components/fms-zenoh/src/: lib.rs
components/influx-client/: Cargo.toml
components/influx-client/src/: connection.rs  lib.rs  writer.rs
components/up-cloudevents/: Cargo.toml  build.rs
components/up-cloudevents/src/: lib.rs
components/up-transport-hono-kafka/: Cargo.toml
components/up-transport-hono-kafka/src/: lib.rs
components/up-transport-hono-mqtt/: Cargo.toml
components/up-transport-hono-mqtt/src/: lib.rs  mqtt_connection.rs
components/vss-forwarder/: Dockerfile  entrypoint.sh  requirements.txt  vss-forwarder.py
config/zenoh/: config-client.json5  config-router.json5
csv-provider/: README.md  run_recorderFMS.sh  signalsCovesaCvRecording.csv  signalsCovesaCvRecording.csv.license  signalsFmsRecording.csv
docs/: _category_.json  docusaurus.md  fleet-analysis-backend.md  introduction.md
grafana/dashboards/: FMS-Fleet.json
grafana/provisioning/dashboards/: dashboards_from_filesystem.yaml
influxdb/: fms-demo.env
influxdb/init-scripts/: create-covesa-token.sh  create-fms-token.sh
leda/: README.md  Setup.md  fms-desired-state.json
leda/data/var/containers/manifests/: csv-provider.json  databroker.json  feedercan.json  feedercan.json.license  fms-forwarder.json
node-red/: Dockerfile  entrypoint.sh  flows.json  package.json  settings.js
spec/: .gitignore  README.md  mapping-fms4-to-vss.md
spec/overlay/: fms.vspec  vss.json
