# SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "fms-consumer",
    "fms-forwarder",
    "fms-server",
    "influx-client",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/eclipse-sdv-blueprints/fleet-management"
version = "0.1.0-SNAPSHOT"
edition = "2021"
documentation = "https://eclipse-sdv-blueprints.github.io/blueprints-website/"

[workspace.dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", default-features = false }
duration-str = { version = "0.7.0", default-features = false }
env_logger = { version = "0.10" }
fms-proto = { path = "fms-proto" }
influx-client = { path = "influx-client", default-features = false }
influxrs = { version = "2.0" }
log = { version = "0.4" }
openssl-sys = { version = "0.9.92", default-features = false }
protobuf = { version = "3" }
protobuf-codegen = { version = "3" }
protoc-bin-vendored = { version = "3" }
# prost has no features
prost = { version = "0.12" }
# prost-types has no features
prost-types = { version = "0.12" }
# tokio does not enable features by default
tokio = { version = "1.29" }
tonic = { version = "0.10", default-features = false }
tonic-build = { version = "0.10", default-features = false }

[profile.release]
lto = true                 # Link time optimization (dead code removal etc...)
opt-level = "s"
codegen-units = 1
incremental = false
strip = true

