# SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "fms-consumer",
    "fms-forwarder",
    "fms-server",
    "fms-zenoh",
    "influx-client",
    "up-transport-hono-kafka",
    "up-transport-hono-mqtt",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/eclipse-sdv-blueprints/fleet-management"
version = "0.1.0-SNAPSHOT"
edition = "2021"
documentation = "https://eclipse-sdv-blueprints.github.io/blueprints-website/"

[workspace.dependencies]
async-trait = { version = "0.1.89" }
bytes = { version = "1.11.0" }
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.53", default-features = false }
env_logger = { version = "0.11.8", default-features = false, features = [
    "humantime",
] }
fms-proto = { path = "fms-proto" }
fms-zenoh = { path = "fms-zenoh" }
influx-client = { path = "influx-client", default-features = false }
influxrs = { version = "3.0.1", default-features = false }
log = { version = "0.4.28" }
protobuf = { version = "3.7.2" }
# tokio does not enable features by default
tokio = { version = "1.48" }
up-rust = { version = "0.4.0", default-features = false }
up-transport-hono-kafka = { path = "up-transport-hono-kafka" }
up-transport-hono-mqtt = { path = "up-transport-hono-mqtt" }
up-transport-zenoh = { version = "0.5.0" }
zenoh = { version = "1.2.1", default-features = false }

[profile.release]
lto = true          # Link time optimization (dead code removal etc...)
opt-level = "s"
codegen-units = 1
incremental = false
strip = true
