# SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fms-consumer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
async-std = {workspace = true, features = ["attributes"] }
clap = { workspace = true, features = ["std", "env", "color", "help", "usage", "error-context", "suggestions"] }
env_logger = { workspace = true }
fms-proto = { workspace = true }
futures = {version ="0.3"}
influx-client = { workspace = true, features = ["writer"] }
rdkafka = { version = "0.36", default-features = false, features = ["libz", "tokio", "cmake-build", "ssl-vendored"] }
log = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
zenoh = { workspace = true }

[build-dependencies]
# see https://github.com/fede1024/rust-rdkafka/issues/572#issuecomment-1529316876
openssl-src = { version = "300", features = ["force-engine"] }
