# SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fms-forwarder"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "std",
    "env",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
duration-str = { workspace = true, features = ["time"] }
env_logger = { workspace = true }
fms-proto = { workspace = true }
influx-client = { workspace = true, features = ["writer"] }
log = { workspace = true }
paho-mqtt = { version = "0.12", default-features = false, features = [
    "vendored-ssl",
] }
protobuf = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.11", default-features = false, features = [
    "channel",
    "codegen",
    "tls",
    "prost",
] }
zenoh = { workspace = true, features = ["transport_tcp"] }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-build = { version = "0.11", default-features = false, features = [
    "prost",
    "transport",
] }
