# SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "influx-client"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = [
    "std",
    "env",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
fms-proto = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }
influxrs = { workspace = true, features = ["client"] }
isahc = { version = "1.7", default-features = false, features = [
    "http2",
    "static-ssl",
    "static-curl",
    "text-decoding",
] }
log = { workspace = true }

[features]
default = ["writer"]
writer = ["dep:fms-proto", "dep:protobuf"]
