# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "up-transport-hono-kafka"
publish = false
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env"] }
fms-proto = { workspace = true }
futures = { version = "0.3" }
log = { workspace = true }
protobuf = { workspace = true }
rdkafka = { version = "0.37", default-features = false, features = [
    "libz",
    "tokio",
    "cmake-build",
    "ssl-vendored",
] }
tokio = { workspace = true }
up-rust = { workspace = true, features = ["cloudevents", "util"] }

[build-dependencies]
# see https://github.com/fede1024/rust-rdkafka/issues/572#issuecomment-1529316876
openssl-src = { version = "300", features = ["force-engine"] }
